feat: complete rewrite of scheduler logic